<resources>
    <string name="app_name">PronuntiApp - mistificatori</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="pw">Password</string>
    <string name="repeatPw">Repeat password</string>
    <string name="createAccount">Click here for Sign Up</string>
    <string name="backToLogin">Click here for Log In</string>
    <string name="logo">logo app</string>
    <string name="addKid">Add child button</string>
    <string name="errorMail">Invalid email</string>
    <string name="errorPassword">Password must contain a number and an uppercase character</string>
    <string name="errorRepeatPassword">Passwords do not match</string>
    <string name="failedLogin">Wrong eMail or Password</string>
    <string name="failerSignup">Sign up failed</string>
    <string name="welcome">Welcome!</string>
    <string name="welcomeBack">Welcome back!</string>
    <string name="insertcode">Insert code</string>
    <string name="send">Send</string>
    <string name="correction">Correction</string>
    <string name="background">Select Scenario</string>
    <string name="therapy">Therapy</string>
    <string name="start">Start Game</string>
    <string name="code">001</string>
    <string name="open">Open navigation drawer</string>
    <string name="close">Close navigation drawer</string>
    <string name="logoutConfirm">Do you want to log out of the account?</string>
    <string name="deleteKid">Delete</string>
    <string name="confirmDeleteKid">Do you want to delete the profile of </string>
    <string name="deleteProfile">Delete profile</string>
    <string name="correct">correct</string>
    <string name="wrong">wrong</string>
    <string name="imgEs1">imgExOne</string>
    <string name="help">help button</string>
    <string name="microfone">Microfone button</string>
    <string name="playAudio">play button</string>
    <string name="cancelButton">Cancel</string>
    <string name="confirmButtno">confirm</string>
    <string name="coin">coins</string>
    <string name="selected">SELECTED</string>
    <string name="select">SELECT</string>
    <string name="poor">You don\'t have enough coin</string>
    <string name="modCorrezioneTitolo">Edit correction</string>
    <string name="modCorrezioneMsg">Are you sure you want to edit the correction?</string>
    <string name="yes">yes</string>
    <string name="parola">Word:</string>
    <string name="registrazione">Recording:</string>
    <string name="correzione">Auto correction:</string>
    <string name="esNonFatto">Exercise not yet completed</string>
    <string name="noCorrezione">Non-editable correction</string>
    <string name="denominazione">TYPE: Denomination</string>
    <string name="sequenze">TYPE: Sequences</string>
    <string name="riconoscimento">TYPE: Recognition</string>
    <string name="scenario">Scenario</string>

</resources>