<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        android:gravity="center">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo_svg" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="70dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            android:outlineAmbientShadowColor="@color/pink"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/errorEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/errorMail"
            android:visibility="gone"
            android:textColor="@color/red"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/pw"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/errorPassword1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/errorPassword"
            android:visibility="gone"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/red"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextRepeatPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/repeatPw"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/errorPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/errorRepeatPassword"
            android:visibility="gone"
            android:textColor="@color/red"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>

        <Button
            android:id="@+id/SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:textSize="19sp"
            android:text="@string/signup"
            android:enabled="false"
            android:textColor="@color/white"
            android:onClick="signUpMethod"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backToLogin"
            android:onClick="goToLogIn"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>