<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <!-- dialog_layout.xml -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/insertcode"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <EditText
            android:id="@+id/editTextCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/code"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>