<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuParent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/kidName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/kidCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>
        <Button
            android:id="@+id/iniziaGiocoButton"
            android:layout_width="270dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/green"
            android:text="@string/start"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:onClick="start"
            tools:layout_editor_absoluteX="123dp"
            tools:layout_editor_absoluteY="208dp" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>
        <Button
            android:id="@+id/correctionButton"
            android:layout_width="270dp"
            android:layout_height="70dp"
            android:text="@string/correction"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="correction"
            tools:layout_editor_absoluteX="123dp"
            tools:layout_editor_absoluteY="294dp" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>
        <Button
        android:id="@+id/backgroundButton"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:text="@string/background"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:onClick="background"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="92dp" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>
    <Button
        android:id="@+id/therapyButton"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:text="@string/therapy"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:onClick="therapy"
        tools:layout_editor_absoluteX="123dp"
        tools:layout_editor_absoluteY="438dp" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>
        <Button
            android:id="@+id/deleteButton"
            android:layout_width="270dp"
            android:layout_height="70dp"
            android:text="@string/deleteKid"
            android:backgroundTint="@color/red"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:onClick="deleteKid"
            tools:layout_editor_absoluteX="123dp"
            tools:layout_editor_absoluteY="438dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>