<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MappaBambino">

    <RelativeLayout
        android:id="@+id/sfondo"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:layout_gravity="end">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/coin"
                android:contentDescription="@string/coin" />

            <TextView
                android:id="@+id/coin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>
        </FrameLayout>

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="fill_vertical"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center_vertical"
            android:background="@color/green"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <ImageButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/character_green"
                android:contentDescription="@string/correct"
                android:onClick="character"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <ImageButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/play_gme"
                android:onClick="playGame"
                android:contentDescription="@string/playAudio" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <ImageButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/stat"
                android:contentDescription="@string/email" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

        <ImageView
            android:id="@+id/personaggio"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="bottom"
            android:contentDescription="@string/start"
            android:src="@drawable/personaggio_a"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>