<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CorrezioneDenominazione">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:contentDescription="@string/imgEs1"
            android:src="@drawable/logo_svg" />

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:cardCornerRadius="100dp"
            app:cardBackgroundColor="@color/green"
            android:layout_marginTop="50dp">

            <ImageButton
                android:id="@+id/playAudio"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/play"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:contentDescription="@string/playAudio"
                android:onClick="riproduci"
                android:background="?android:selectableItemBackgroundBorderless"
                app:tint="@color/white"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Correzione automatica:"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardWrong"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardCornerRadius="100dp"
                app:cardBackgroundColor="@color/red">

                <ImageButton
                    android:id="@+id/wrong"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/clear"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center"
                    android:onClick="setWrong"
                    android:contentDescription="@string/cancelButton"
                    android:background="?android:selectableItemBackgroundBorderless"
                    app:tint="@color/white"/>

            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardCorrect"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardCornerRadius="100dp"
                app:cardBackgroundColor="@color/green_light">

                <ImageButton
                    android:id="@+id/correct"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/check"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center"
                    android:contentDescription="@string/confirmButtno"
                    android:onClick="setCorrect"
                    android:background="?android:selectableItemBackgroundBorderless"
                    app:tint="@color/white"/>

            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>